--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Web Page</title>
+    <title>form a table</title>
 </head>
 <body>
-    <h1>This is a Header</h1>
-    <p>This is a paragraph.</p>
-    <p>This is another paragraph.</p>
-    
+    <h1>Form a table</h1
+
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+                <th>Email</th>
+                <th>Phone</th>
+            </tr>
+            <tr>
+                <td>John</td>
+                <td>25</td>
+                <td>
+
 </body>
 </html>
